--- a/test/fixtures/feels.yml
+++ b/test/fixtures/feels.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  event_id: 1
-  ganre_id: 1
+  feel_title: MyString
 
 two:
-  event_id: 1
-  ganre_id: 1
+  feel_title: MyString
