--- a/config/database.yml
+++ b/config/database.yml
@@ -8,10 +8,12 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
-  collation: utf8mb4_general_ci
-  host: <%= ENV['DB_HOST'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # timeout: 5000
+  # url: <%= ENV['DATABASE_URL'] %>
+  username: root
+  password: password
+  host: db
 
 
 development:
@@ -25,6 +27,13 @@ test:
   <<: *default
   database: Im_here_docker_test
 
-# production:
-#   <<: *default
-#   database: db/production
+production:
+  <<: *default
+  database: <%= ENV['DB_DATABASE'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['DB_HOST'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
