--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -1,13 +1,14 @@
+# user  root;
 
-upstream Im_here_docker {
-  server unix:///im_here_docker/tmp/sockets/puma.sock;
+upstream im_here_docker {
+  server unix:///Im_here_docker/tmp/sockets/puma.sock;
 }
 
 server {
   listen 80;
 # =========ローカルと本番切り替え===========
-  server_name 18.177.211.240;
-  # server_name localhost;
+  # server_name 18.177.211.240;
+  server_name localhost;
 # ======================================
 
   access_log /var/log/nginx/access.log;
