AWSデプロイ前

--- a/nginx_docker/nginx.conf
+++ b/nginx_docker/nginx.conf
@@ -7,8 +7,8 @@ upstream im_here_docker {
 server {
   listen 80;
 # =========ローカルと本番切り替え===========
-  # server_name 18.177.211.240;
-  server_name localhost;
+  server_name 18.179.249.188;
+  # server_name localhost;
 # ======================================
 
   access_log /var/log/nginx/access.log;
