--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   app:
     build:
       context: .
-    command: bundle exec puma -C config/puma.rb
-    # command: bundle exec puma -C config/puma.rb -e production
+    # command: bundle exec puma -C config/puma.rb
+    command: bundle exec puma -C config/puma.rb -e production
 
     volumes:
       - .:/Im_here_docker
@@ -13,20 +13,20 @@ services:
       - log-data:/Im_here_docker/log
     networks:
       - Im_here_docker-network
-    depends_on:
-      - db
+  #   depends_on:
+  #     - db
 
-  db:
-    image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-      MYSQL_DATABASE: fitO2_development
-    volumes:
-      - db-data:/var/lib/mysql
-    networks:
-      - Im_here_docker-network
+  # db:
+  #   image: mysql:5.7
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: password
+  #     MYSQL_USER: user
+  #     MYSQL_PASSWORD: password
+  #     MYSQL_DATABASE: fitO2_development
+  #   volumes:
+  #     - db-data:/var/lib/mysql
+  #   networks:
+  #     - Im_here_docker-network
 
   web:
     build:
