--- a/config/database.yml
+++ b/config/database.yml
@@ -11,9 +11,9 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   # timeout: 5000
   # url: <%= ENV['DATABASE_URL'] %>
-  username: root
-  password: password
-  host: db
+  # username: root
+  # password: password
+  # host: db
 
 
 development:
